Removed scrolling from application entirely if modal is open as a stop-gap against iOS 8 iframe issue.

--- a/src/modules/QuoteModal/QuoteModal.css
+++ b/src/modules/QuoteModal/QuoteModal.css
@@ -27,6 +27,7 @@
 .pinch-modal .iframe-wrapper {
   max-height: 100%;
   -webkit-overflow-scrolling: touch;
+  overflow-x: auto;
   overflow-y: scroll;
   z-index: 100000;
   max-width: 800px;
